[SM-7] API quản lý lịch trình - sửa lại api dăng nhập đăng kí
