# src/routes/index.js
@@ -5,5 +5,6 @@ const router = express.Router();
 
 router.use('/api/auth', require('./access'));
 router.use('/api/friend', require('./friend'));
+router.use('/api/schedule', require('./schedule'));
 
 module.exports = router;
