# src/routes/schedule/index.js
@@ -1,0 +1,16 @@
+'use strict';
+const express = require('express');
+const router = express.Router();
+const asyncHandler = require('../../common/helpers/asyncHandler');
+const { authentication } = require('../../auth/auth-utils');
+const scheduleController = require('../../modules/schedule/schedule.controller');
+
+
+/// AUTHENTICATION
+router.use(authentication)
+
+/// ---------------------------- Need check authen route ---------------------------- ///
+router.post('', asyncHandler(scheduleController.create));
+router.patch('', asyncHandler(scheduleController.update));
+
+module.exports = router;
